--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Jasmine Carson</title>
     <link rel="icon" href="https://live.staticflickr.com/1/304565_ea6d8e1b43.jpg" type="image/x-icon">
   </head>
