--- a/music.html
+++ b/music.html
@@ -1,5 +1,11 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Jasmine Carson - Music</title>
+  </head>
   <body>
     <p>hi</p>
   </body>
