--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Jasmine Carson</title>
-    <link rel="icon" href="https://i5.walmartimages.com/asr/940f4e27-6c0b-4e16-a951-24ca7d97bfc1_1.8e45eab76b26b3c8b2111fc6d73f1034.jpeg" type="image/x-icon">
+    <link rel="icon" href="jasmines.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -48,18 +48,28 @@
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-12">
               <h3 class="feature-title">About</h3>
-              <img src="images/column-1.jpg" class="img-fluid">
+              <img src="jasmines.jpeg" class="img-fluid">
               <p>I'm a recent graduate with a bachelor's degree in computer science and music. I'm interested in cybersecurity and artificial intelligence, and looking for an entry level job.</p>
           </div>
 
           <div class="col-lg-4 col-md-4 col-sm-12">
               <h3 class="feature-title">Music</h3>
-              <img src="images/column-2.jpg" class="img-fluid">
+              <img src="lavender.jpg" class="img-fluid">
               <p>I primarily sing medieval and Renaissance choral music and compose for voice. My machine learning composition project can be found on the Music page.</p>
           </div>
 
           <div class="col-lg-4 col-md-4 col-sm-12">
-
+              <h3 class="feature-title">Contact Me</h3>
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Name" name="">
+              </div>
+              <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Email Address" name="email">
+              </div>
+              <div class="form-group">
+                  <textarea class="form-control" rows="4"></textarea>
+              </div>
+              <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
           </div>
         </div>
     </div>
